Test - reuse LongStream